--- a/chap7.qmd
+++ b/chap7.qmd
@@ -20,7 +20,7 @@ title: "第7章"
 
 <img src="img/video.png" alt="讲义" style="width: 24px; height: 24px;margin-right: 10px">[第7章教材习题7.5-7.10](https://www.bilibili.com/video/BV1Fo4y1P7b5/)
 
-<img src="img/video.png" alt="讲义" style="width: 24px; height: 24px;margin-right: 10px">[Excel数值模拟： 什么是置信水平？你的理解正确吗？](https://www.bilibili.com/video/)
+<img src="img/video.png" alt="讲义" style="width: 24px; height: 24px;margin-right: 10px">[Excel数值模拟： 什么是置信水平？你的理解正确吗？](https://www.bilibili.com/video/BV1eM411D7Va/)
 
 <h3 style="color: #044875;"> 拓展资源 </h3>
 
