--- a/case2pre.qmd
+++ b/case2pre.qmd
@@ -246,23 +246,25 @@ ggbarstats(mpg,
 
 ## 6 研究结论
 
--   油耗：城市道路均值>16 miles/gallon, 高速均值>22 miles/gallon
+-   油耗(单位：miles per gallon 英里每加仑), 数值越大代表越省油
 
--   城市道路：四驱(14 miles/gallon) < 前驱(20 miles/gallon)
-
--   高速道路：四驱(20 miles/gallon) < 前驱(29 miles/gallon)
-
--   城市道路：自动挡(16 miles/gallon) < 手动挡(19 miles/gallon)
-
--   高速道路：四驱(22 miles/gallon) < 前驱(26 miles/gallon)
+  -   城市均值 > 16, 高速均值 > 22
+  
+  -   城市：四驱(14) < 前驱(20)
+  
+  -   高速：四驱(20) < 前驱(29)
+  
+  -   城市：自动挡(16) < 手动挡(19)
+  
+  -   高速：四驱(22) < 前驱(26 )
 
 ## 6 研究结论
 
--   油耗：城市道路大于高速
+-   高速比城市道路省油
 
--   油耗：四驱大于前驱，高速路比城市道路的差距更大。
+-   前驱比四驱省油，高速(9)比城市(6)的差距更大。
 
--   油耗：自动档大于手动挡，高速路比城市道路的差距更大
+-   手动挡比自动档省油，高速(4)比城市(3)的差距更大。
 
 
 
