--- a/case2pre.qmd
+++ b/case2pre.qmd
@@ -1,6 +1,6 @@
 ---
 title: "<span style='font-size: 80px;'>汽车性能分析</span>"
-subtitle: "<span style='font-size: 80px;'>第7-9章</span>"
+subtitle: "<span style='font-size: 80px;'>第8-9章</span>"
 date: today
 author: "<span style='color: #044875;'>Li Zongzhang</span>"
 format: 
@@ -25,7 +25,6 @@ data(mpg)
 library(ggstatsplot)
 ```
 
-
 ## 1 数据和变量
 
 数据来源：mpg {ggplot2}
@@ -36,15 +35,17 @@ cty: city miles per gallon
 
 hwy: highway miles per gallon
 
+-   英里每加仑，数值越大，代表越省油。
+
 trans: type of transmission
 
-drv: the type of drive train, 
+drv: the type of drive train,
 
-  -   f = front-wheel drive, 
-  
-  -   r = rear wheel drive, 
-  
-  -   4 = 4wd
+-   f = front-wheel drive,
+
+-   r = rear wheel drive,
+
+-   4 = 4wd
 
 ## 2 油耗性能分析
 
@@ -52,28 +53,15 @@ drv: the type of drive train,
 
 2.2 hwy均值的检验
 
-2.3 四驱和前驱城市道路油耗比较
+2.3 四驱和前驱城市油耗比较
 
-2.4 四驱和前驱高速道路油耗比较
+2.4 四驱和前驱高速油耗比较
 
-2.5 自动档和手动挡城市道路油耗比较
+2.5 自动档和手动挡城市油耗比较
 
-2.5 自动档和手动挡高速道路油耗比较
-
-
-
+2.5 自动档和手动挡高速油耗比较
 
 ## 2.1 cty均值的检验
-
-$H_0: \mu \leq 16$ 
-
-$H_1: \mu > 16$ 
-
-拒绝原假设$H_0: \mu \leq 16$ 。
-
-
-## 2.1 cty均值的检验
-
 
 ```{r}
 #| echo: TRUE
@@ -84,19 +72,17 @@ gghistostats(mpg, cty,
   theme_classic(base_size = 15)
 ```
 
+## 2.1 cty均值的检验
 
+$H_0: \mu \leq 16$
+
+$H_1: \mu > 16$
+
+拒绝原假设$H_0: \mu \leq 16$ 。
+
+认为在城市, 油耗均值大于16英里/加仑。
 
 ## 2.2 hwy均值的检验
-
-$H_0: \mu \leq 22$ 
-  
-$H_1: \mu > 22$
-  
-拒绝原假设$H_0: \mu \leq 22$ 。
-
-
-## 2.2 hwy均值的检验
-
 
 ```{r}
 #| echo: TRUE
@@ -110,15 +96,21 @@ gghistostats(mpg, hwy,
   theme_classic(base_size = 15)
 ```
 
+## 2.2 hwy均值的检验
+
+$H_0: \mu \leq 22$
+
+$H_1: \mu > 22$
+
+拒绝原假设$H_0: \mu \leq 22$ 。
+
+认为在高速, 油耗均值大于22英里/加仑。
+
 ## 2.3 四驱和前驱城市道路油耗比较
 
-$H_0: \mu_4 \geq \mu_f$ 
-  
-$H_1: \mu_4 < \mu_f$
-
-## 2.3 四驱和前驱城市道路油耗比较--两个总体均值的检验
 ```{r}
 #| echo: TRUE
+#| warning: false
 mpg %>%
   filter(drv %in% c("4", "f")) %>%
   ggbetweenstats(drv, 
@@ -132,19 +124,16 @@ mpg %>%
   theme_classic(base_size = 15)
 ```
 
+## 2.3 四驱和前驱城市道路油耗比较
 
-## 2.4 四驱和前驱高速道路油耗比较
+$H_0: \mu_4 \geq \mu_f$
 
-  
-  
-$H_0: \mu_4 \geq \mu_f$ 
-  
 $H_1: \mu_4 < \mu_f$
-  
-拒绝原假设$H_0: \mu_4 \geq \mu_f$。
 
+认为在城市, $\mu_4 < \mu_f$, 前驱(20)比四驱(14)省油。
 
-## 2.4 四驱和前驱高速道路油耗比较--两个总体均值的检验
+## 2.4 四驱和前驱高速油耗比较
+
 ```{r}
 #| echo: TRUE
 #| warning: false
@@ -161,7 +150,18 @@ mpg %>%
   theme_classic(base_size = 15)
 ```
 
-## 2.5 自动档和手动挡城市道路油耗比较--两个总体均值的检验
+## 2.4 四驱和前驱高速油耗比较
+
+$H_0: \mu_4 \geq \mu_f$
+
+$H_1: \mu_4 < \mu_f$
+
+拒绝原假设$H_0: \mu_4 \geq \mu_f$。
+
+认为在高速, $\mu_4 < \mu_f$, 前驱(28)比四驱(24)省油。
+
+## 2.5 自动档和手动挡城市道路油耗比较
+
 ```{r}
 #| echo: TRUE
 #| warning: false
@@ -180,7 +180,18 @@ mpg %>%
   theme_classic(base_size = 15)
 ```
 
-## 2.6 自动档和手动挡高速道路油耗比较--两个总体均值的检验
+## 2.5 自动档和手动挡城市道路油耗比较
+
+$H_0: \mu_{auto} \geq \mu_{manual}$
+
+$H_1: \mu_{auto} < \mu_{manual}$
+
+拒绝原假设$H_0: \mu_4 \geq \mu_f$。
+
+认为在城市, $\mu_{auto} < \mu_{manual}$ , 手动挡(19)比自动挡(16)省油。
+
+## 2.6 自动档和手动挡高速油耗比较
+
 ```{r}
 #| echo: TRUE
 #| warning: false
@@ -199,7 +210,15 @@ mpg %>%
   theme_classic(base_size = 15)
 ```
 
+## 2.6 自动档和手动挡高速油耗比较
 
+$H_0: \mu_{auto} \geq \mu_{manual}$
+
+$H_1: \mu_{auto} < \mu_{manual}$
+
+拒绝原假设$H_0: \mu_4 \geq \mu_f$。
+
+认为在高速, $\mu_{auto} < \mu_{manual}$ , 手动挡(26)比自动挡(22)省油。
 
 ## 3 驱动类型分布
 
@@ -215,7 +234,7 @@ ggpiestats(mpg,
   theme_bw(base_size = 15)
 ```
 
-
+四驱、前驱、后驱：45%，45%， 10%
 
 ## 4 驱动类型和传动类型的关系分析
 
@@ -232,6 +251,8 @@ mpg %>%
   theme_bw(base_size = 15)
 ```
 
+驱动类型和传动类型相互独立。
+
 ## 5 驱动类型和气缸数量的关系分析
 
 ```{r}
@@ -244,19 +265,21 @@ ggbarstats(mpg,
   theme_bw(base_size = 15)
 ```
 
+驱动类型和气缸数量不独立。
+
 ## 6 研究结论
 
 -   油耗(单位：miles per gallon 英里每加仑), 数值越大代表越省油
 
-  -   城市均值 > 16, 高速均值 > 22
-  
-  -   城市：四驱(14) < 前驱(20)
-  
-  -   高速：四驱(20) < 前驱(29)
-  
-  -   城市：自动挡(16) < 手动挡(19)
-  
-  -   高速：四驱(22) < 前驱(26 )
+-   城市均值 \> 16, 高速均值 \> 22
+
+-   城市：四驱(14) \< 前驱(20)
+
+-   高速：四驱(20) \< 前驱(29)
+
+-   城市：自动挡(16) \< 手动挡(19)
+
+-   高速：四驱(22) \< 前驱(26 )
 
 ## 6 研究结论
 
@@ -266,8 +289,6 @@ ggbarstats(mpg,
 
 -   手动挡比自动档省油，高速(4)比城市(3)的差距更大。
 
-
-
 ## 6 研究结论
 
 -   四驱、前驱、后驱：45%，45%， 10%
@@ -276,12 +297,11 @@ ggbarstats(mpg,
 
 -   驱动类型和气缸数量不独立。
 
-    - 4缸，72%前驱，28%四驱
-    
-    - 6缸，54%前驱， 41%四驱，5%后驱
-    
-    - 8缸，1%前驱， 69%四驱，30%后驱
-  
+    -   4缸，72%前驱，28%四驱
+
+    -   6缸，54%前驱， 41%四驱，5%后驱
+
+    -   8缸，1%前驱， 69%四驱，30%后驱
 
 # 7 经验分享
 
@@ -291,11 +311,8 @@ ggbarstats(mpg,
 
 -   提炼结论
 
+## 
 
-##
-
-
-<div style="text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 60px;white-space: nowrap;">
+::: {style="text-align: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 60px;white-space: nowrap;"}
 Thanks for your attention！
-</div>
-
+:::
