modify car case

--- a/case2pre.qmd
+++ b/case2pre.qmd
@@ -80,7 +80,7 @@ $H_1: \mu > 16$
 
 拒绝原假设$H_0: \mu \leq 16$ 。
 
-认为在城市, 油耗均值大于16英里/加仑。
+在城市, 油耗均值大于16英里/加仑。
 
 ## 2.2 hwy均值的检验
 
@@ -104,7 +104,7 @@ $H_1: \mu > 22$
 
 拒绝原假设$H_0: \mu \leq 22$ 。
 
-认为在高速, 油耗均值大于22英里/加仑。
+在高速, 油耗均值大于22英里/加仑。
 
 ## 2.3 四驱和前驱城市道路油耗比较
 
@@ -130,7 +130,7 @@ $H_0: \mu_4 \geq \mu_f$
 
 $H_1: \mu_4 < \mu_f$
 
-认为在城市, $\mu_4 < \mu_f$, 前驱(20)比四驱(14)省油。
+在城市, $\mu_4 < \mu_f$, 前驱(20)比四驱(14)省油。
 
 ## 2.4 四驱和前驱高速油耗比较
 
@@ -158,7 +158,7 @@ $H_1: \mu_4 < \mu_f$
 
 拒绝原假设$H_0: \mu_4 \geq \mu_f$。
 
-认为在高速, $\mu_4 < \mu_f$, 前驱(28)比四驱(24)省油。
+在高速, $\mu_4 < \mu_f$, 前驱(28)比四驱(24)省油。
 
 ## 2.5 自动档和手动挡城市道路油耗比较
 
@@ -188,7 +188,7 @@ $H_1: \mu_{auto} < \mu_{manual}$
 
 拒绝原假设$H_0: \mu_4 \geq \mu_f$。
 
-认为在城市, $\mu_{auto} < \mu_{manual}$ , 手动挡(19)比自动挡(16)省油。
+在城市, $\mu_{auto} < \mu_{manual}$ , 手动挡(19)比自动挡(16)省油。
 
 ## 2.6 自动档和手动挡高速油耗比较
 
@@ -218,7 +218,7 @@ $H_1: \mu_{auto} < \mu_{manual}$
 
 拒绝原假设$H_0: \mu_4 \geq \mu_f$。
 
-认为在高速, $\mu_{auto} < \mu_{manual}$ , 手动挡(26)比自动挡(22)省油。
+在高速, $\mu_{auto} < \mu_{manual}$ , 手动挡(26)比自动挡(22)省油。
 
 ## 3 驱动类型分布
 
@@ -266,6 +266,8 @@ ggbarstats(mpg,
 ```
 
 驱动类型和气缸数量不独立。
+
+4缸，72%前驱，28%四驱; 6缸，54%前驱， 41%四驱，5%后驱; 8缸，1%前驱， 69%四驱，30%后驱。
 
 ## 6 研究结论
 
