--- a/case.qmd
+++ b/case.qmd
@@ -62,6 +62,20 @@ title: "小组案例与实验报告"
 
 -  请带笔记本电脑。
 
+## 第15周讨论课安排
+
+### 讨论课前准备
+
+-  创建项目文件。
+
+-  在Excel中整理好收集的数据，变量名设置为英文（变量名不要含有中文、空格和中划线），将其导入到R Studio。
+
+-  创建代码文件，运用第9-11章的方法分析数据，给代码添加注释和分节。
+
+-  遇到的问题和困难
+
+-  请带笔记本电脑。
+
 ### 讨论时间表(见QQ群)
 
 
