--- a/case.qmd
+++ b/case.qmd
@@ -70,9 +70,9 @@ title: "小组案例与实验报告"
 
 -  在Excel中整理好收集的数据，变量名设置为英文（变量名不要含有中文、空格和中划线），将其导入到R Studio。
 
--  创建代码文件，运用第9-11章的方法分析数据，给代码添加注释和分节。
+-  创建代码文件，运用第9章、第10章、第11章(可选做)的方法分析数据，给代码添加注释和分节。
 
--  遇到的问题和困难
+-  小组作业、实验报告中遇到的问题、困难。
 
 -  请带笔记本电脑。
 
